--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -10,25 +10,36 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
+    # This step adds the repository root to the Python path.
+    # It fixes the "ModuleNotFoundError: No module named 'src'" error
+    # by telling Python where to find our files for testing.
+    - name: Set PYTHONPATH
+      run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
+      
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: '3.10'
+
     - name: Add conda to system path
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
+
     - name: Install dependencies
       run: |
         conda env update --file environment.yml --name base
+
     - name: Lint with flake8
       run: |
-        conda install flake8
+        # flake8 is installed via environment.yml, no need to install it again
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
     - name: Test with pytest
       run: |
-        conda install pytest
+        # pytest is installed via environment.yml, no need to install it again
         pytest
