--- a/environment.yml
+++ b/environment.yml
@@ -9,5 +9,9 @@ dependencies:
   - flake8
   - networkx
   - skyfield
+  - python-Levenshtein
   - Flask
   - gunicorn
+  - spacy
+  - pip:
+    - en_core_web_sm
